[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/sprites/Plant_Sprite_Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Plant Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 13.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "bite"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bite"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "spit"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "bite"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "spit"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
advance_condition = "spit"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
advance_condition = "bite"

[sub_resource type="AnimationNodeStateMachine" id=13]
states/bite/node = SubResource( 6 )
states/bite/position = Vector2( 706, 218 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 706, 85 )
states/spit/node = SubResource( 8 )
states/spit/position = Vector2( 924, 85 )
transitions = [ "spit", "idle", SubResource( 9 ), "bite", "idle", SubResource( 10 ), "idle", "spit", SubResource( 11 ), "idle", "bite", SubResource( 12 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 24, 13.5 )

[node name="Plant Enemy" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 2 )
projectileForceX = -200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.5 )
shape = SubResource( 1 )

[node name="ProjectileSpawn" type="Node2D" parent="."]
position = Vector2( -19, -16 )

[node name="DelayBetweenShots" type="Timer" parent="." groups=["enemy"]]
wait_time = 5.0
autostart = true

[node name="DelayBetweenBites" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 7
vframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/bite = SubResource( 5 )
anims/idle = SubResource( 3 )
anims/spit = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/conditions/bite = false
parameters/conditions/spit = false

[node name="PlayerBiteArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBiteArea"]
position = Vector2( -16, -13.5 )
shape = SubResource( 15 )

[connection signal="timeout" from="DelayBetweenShots" to="." method="_on_DelayBetweenShots_timeout"]
[connection signal="timeout" from="DelayBetweenBites" to="." method="_on_DelayBetweenBites_timeout"]
[connection signal="body_entered" from="PlayerBiteArea" to="." method="_on_PlayerBiteArea_body_entered"]
[connection signal="body_exited" from="PlayerBiteArea" to="." method="_on_PlayerBiteArea_body_exited"]
